--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=420, initial-scale=1.0">
   <title>Thiệp cưới online</title>
-  <link rel="stylesheet" href="./assets/css/css">
+  <link rel="stylesheet" href="./assets/css/css.css">
   <link rel="stylesheet" href="./assets/css/tailwind.css">
   <link rel="stylesheet" href="./assets/css/animatev4.css">
   <link rel="stylesheet" href="./assets/css/calendar.css">
