--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=420, initial-scale=1.0">
-  <title>Thiệp cưới online</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Anh Tú - Diệu Nhi</title>
   <link rel="stylesheet" href="./assets/css/css.css">
   <link rel="stylesheet" href="./assets/css/tailwind.css">
   <link rel="stylesheet" href="./assets/css/animatev4.css">
   <link rel="stylesheet" href="./assets/css/calendar.css">
   <link rel="stylesheet" href="./assets/css/bottom-sheet.css">
+
+  <script>
+    !function(e,t,i){var a,n=e.innerWidth;if(e[i]=(true||n<768)?"mobile":"desktop","desktop"==e[i])a="width=" + 960 + ", user-scalable=no, initial-scale=1.0";else{var o=1;w=420;w!=n&&(o=n/w),a="width=" + w + ", user-scalable=no, initial-scale=" + o + ", minimum-scale=" + o + ", maximum-scale=" + o}var l=t.createElement("meta");l.name="viewport",l.setAttribute("content",a),t.head.appendChild(l)}(window,document,"DISPLAY");  
+  </script>
   <script src="./assets/js/calendar.js" defer></script>
 </head>
 
