--- a/index.html
+++ b/index.html
@@ -242,6 +242,11 @@
       <div class="absolute top-[482.5px] left-[-1px] w-[422px] h-[21px] animate">
         <p class="lunar-calendar" animate="fadeIn_2s"></p>
       </div>
+      <div class="absolute top-[510px] left-[-1px] w-[422px] h-[21px] animate">
+        <div class="flex items-center justify-center gap-x-3 countdown" animate="fadeIn_2s">
+          <p class="diff-time"></p>
+        </div>
+      </div>
     </section>
     <section class="section-address">
       <div class="section-background absolute w-full h-full"></div>
