--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="./assets/images/joy.png">
 
-  <title>Anh Tú - Diệu Nhi</title>
+  <title>Bá Quỳnh - Mỹ Hạnh</title>
   <link rel="stylesheet" href="./assets/css/css.css">
   <link rel="stylesheet" href="./assets/css/tailwind.css">
   <link rel="stylesheet" href="./assets/css/animatev4.css">
@@ -85,7 +85,7 @@
             </div>
 
             <div class="absolute top-[80px] left-[3.5px] w-[413px] h-[60px] animate">
-              <h1 id="couple-name" class="w-full animate-[zoomIn_4s]">Anh Tú - Diệu Nhi</h1>
+              <h1 id="couple-name" class="w-full animate-[zoomIn_4s]">Bá Quỳnh - Mỹ Hạnh</h1>
             </div>
 
             <div class="absolute slide-right animate-[slideInLeft_8s]"></div>
@@ -111,18 +111,18 @@
             <p class="family-info" animate="fadeIn_3s">
               &nbsp;NHÀ TRAI
               <br>
-              ÔNG NGUYỄN ANH NINH
+              ÔNG TRẦN VĂN QUÝ
               <br>
-              BÀ LÊ THỊ NHUNG
+              BÀ TRẦN THỊ OANH
               <br>
             </p>
           </div>
 
           <div class="absolute top-[175.5px] left-[21.52px] w-[165px] h-[39px] animate">
             <p class="family-address" animate="fadeIn_3s">
-              Lộc Tấn, Lộc Ninh,
+              Thái Niên, Bảo Thắng,
               <br>
-              Bình Phước
+              Lào Cai
             </p>
           </div>
 
@@ -130,17 +130,18 @@
             <p class="family-info" animate="fadeIn_3s">
               &nbsp;NHÀ GÁI
               <br>
-              ÔNG NGUYỄN ANH NINH
+              ÔNG VƯƠNG ĐỨC TUẤN
               <br>
-              BÀ LÊ THỊ NHUNG
+              BÀ TRẦN THỊ NGOAN
               <br>
             </p>
           </div>
 
           <div class="absolute top-[175.5px] left-[237.52px] w-[165px] h-[39px] animate">
             <p class="family-address" animate="fadeIn_3s">
-              Lộc Tấn, Lộc Ninh,
-              <br>Bình Phước
+              Cam Cọn, Bảo Yên,
+              <br>
+              Lào Cai
             </p>
           </div>
 
@@ -152,7 +153,7 @@
 
           <div class="absolute top-[273.5px] left-[3.5px] w-[413px] h-[60px] animate">
             <h1 class="couple-fullname" animate="zoomIn_4s">
-              Nguyễn Anh Tú
+              Trần Bá Quỳnh
             </h1>
           </div>
 
@@ -162,7 +163,7 @@
 
           <div class="absolute top-[355px] left-[3.5px] w-[413px] h-[60px] animate">
             <h1 class="couple-fullname" animate="zoomIn_4s">
-              Trần Thị Diệu Nhi
+              Vương Mỹ Hạnh
             </h1>
           </div>
 
@@ -189,21 +190,21 @@
       <div class="absolute top-[117.5px] left-[24.6625px] w-[116px] h-[165px] animate">
         <div animate="fadeInUp_3s">
           <div class="image"
-            style="--url: url(https://content.pancake.vn/1/s523x702/fwebp/21/54/83/cb/163b4872b6600196d0ac068b1f046c5dd5f9d20c3ddad5e7c0abea9b.jfif)">
+            style="--url: url(../wedding/20.jpg)">
           </div>
         </div>
       </div>
       <div class="absolute top-[85.5px] left-[152px] w-[116px] h-[165px] animate">
         <div animate="fadeInUp_3s">
           <div class="image"
-            style="--url: url(https://content.pancake.vn/1/s516x774/fwebp/3c/3b/ca/e1/e12ca0e6af675d653327f5a3b5d2c7c2385f71d26b8fee7604b45828.jpg)">
+            style="--url: url(../wedding/17.jpg)">
           </div>
         </div>
       </div>
       <div class="absolute top-[117.5px] left-[279.35px] w-[116px] h-[165px] animate">
         <div animate="fadeInUp_3s">
           <div class="image"
-            style="--url: url(https://content.pancake.vn/1/s516x774/fwebp/6f/2b/71/1d/03a457a718b5bf78c5639d6de0521b7a19ec698dcd5737408a50bd16.jpg)">
+            style="--url: url(../wedding/19.jpg)">
           </div>
         </div>
       </div>
@@ -322,58 +323,49 @@
       <div class="absolute top-[52px] left-[25.5px] w-[179px]">
         <div class="mb-[8px]" animate="fadeInUp_3s">
           <div class="image h-[268px]"
-            style="--url: url(https://content.pancake.vn/web-media/e9/80/6a/05/fcf14d0545da0e656237816d3712c50d2792afda074a96abfd9bcec5.jpg)">
+            style="--url: url(../wedding/6.jpg)">
           </div>
         </div>
         <div class="mb-[8px]" animate="fadeInLeft_3s">
           <div class="image h-[268px]"
-            style="--url: url(https://content.pancake.vn/web-media/84/b3/f5/cd/cc7957b9f0e497f01a17d05f9e73406b7650b249c169b424c7ee1767.jpg)">
+            style="--url: url(../wedding/8.jpg)">
           </div>
         </div>
         <div class="mb-[8px]" animate="fadeInLeft_3s">
           <div class="image h-[268px]"
-            style="--url: url(https://content.pancake.vn/1/s578x867/fwebp/ad/c0/11/16/06080e040619cef49e87d7e06a574eb61310d3dc4bdc9f0fec3638c9.jpg)">
+            style="--url: url(../wedding/9.jpg)">
           </div>
         </div>
         <div animate="fadeInLeft_3s">
           <div class="image h-[268px]"
-            style="--url: url(https://content.pancake.vn/1/s578x867/fwebp/cb/87/1f/67/25cdb38375c4ffc82ea938461257c5fbb49f3407e402f3e6ff903387.jpg)">
+            style="--url: url(../wedding/12.jpg)">
           </div>
         </div>
       </div>
-
-      <div class="absolute top-[81.5px] left-[214.5px] w-[179px]">
-        <div animate="fadeInUp_3s">
-          <div class="image h-[268px]"
-            style="--url: url(https://content.pancake.vn/web-media/09/00/8a/b4/692735fdc0775ae1530963a767ce4264df77078f659771a3cde9c5ac.jpg)">
-          </div>
-        </div>
-      </div>
-
       <div class="absolute top-[81.5px] left-[214.5px] w-[179px]">
         <div class="mb-[8px]" animate="fadeInUp_3s">
           <div class="image h-[268px]"
-            style="--url: url(https://content.pancake.vn/web-media/09/00/8a/b4/692735fdc0775ae1530963a767ce4264df77078f659771a3cde9c5ac.jpg)">
+            style="--url: url(../wedding/11.jpg)">
           </div>
         </div>
         <div class="mb-[8px]" animate="fadeInRight_3s">
           <div class="image h-[116px]"
-            style="--url: url(https://content.pancake.vn/1/s781x519/fwebp/60/b1/5e/e9/89fd2d2d6cd9a62db6e70776243eb9ed8603fc1fb415bdc95da92104.jpg)">
+            style="--url: url(../wedding/14.jpg); background-position-y: -50px;">
           </div>
         </div>
         <div class="mb-[8px]" animate="fadeInRight_3s">
           <div class="image h-[116px]"
-            style="--url: url(https://content.pancake.vn/1/s702x537/fwebp/7a/e8/d6/f6/da197a5a3542dfe09e7faa9e118999103385582808a2e2014fc72986.jpg)">
+            style="--url: url(../wedding/15.jpg); background-position-y: -50px;">
           </div>
         </div>
         <div class="mb-[8px]" animate="fadeInRight_3s">
           <div class="image h-[268px]"
-            style="--url: url(https://content.pancake.vn/1/s580x861/fwebp/9d/60/03/fe/ecbd36b01369b3064a01426c59166451161e648939a52fd952564e21.jpg)">
+            style="--url: url(../wedding/13.jpg)">
           </div>
         </div>
         <div animate="fadeInRight_3s">
           <div class="image h-[268px]"
-            style="--url: url(https://content.pancake.vn/1/s587x839/fwebp/43/f6/88/e6/33fad2e85f20c3cab3d076535139371b0378fccc049b1083efffb1c5.jpg)">
+            style="--url: url(../wedding/10.jpg)">
           </div>
         </div>
       </div>
@@ -381,7 +373,7 @@
     <section class="section-thanks">
       <div class="overlay"></div>
       <div class="image-background"
-        style="--url: url(https://content.pancake.vn/web-media/ad/c0/11/16/06080e040619cef49e87d7e06a574eb61310d3dc4bdc9f0fec3638c9.jpg)">
+        style="--url: url(../wedding/3.jpg)">
       </div>
 
       <div class="absolute top-[354px] left-0 w-full h-[147px]">
