--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
         <div class="w-full h-full frame"></div>
       </div>
       <div class="absolute top-[58.32px] left-[-0.5px] w-[421px] h-[30px] animate">
-        <p class="title" animate="fadeIn_2s">NHÀ HÀNG LONG THỊNH</p>
+        <p class="title" animate="fadeIn_2s">NHÀ HÀNG TRỌNG BÉO</p>
       </div>
       <div class="absolute top-[96.32px] left-[62.5px] w-[295px] h-[42px] animate">
-        <p class="address" animate="fadeIn_2s">Số xxx, Đường xxx, Huyện xxx <br> Tỉnh xxx</p>
+        <p class="address" animate="fadeIn_2s">Thúc Môn, Thái Niên, Huyện Bảo Thắng <br> Tỉnh Lào Cai</p>
       </div>
       <div class="absolute top-[154px] left-[137.125px] w-[140px] h-[32px] animate">
         <div class="animate-[pulse_4s_infinite] flex w-full h-full btn-direction items-center justify-center">
