--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
               <h1 id="couple-name" class="w-full animate-[zoomIn_4s]">Bá Quỳnh - Mỹ Hạnh</h1>
             </div>
 
-            <div class="absolute slide-right animate-[slideInLeft_8s]"></div>
-            <div class="absolute slide-left animate-[slideInRight_8s]"></div>
+            <div class="absolute slide-right animate-[slideOutRight_8s]"></div>
+            <div class="absolute slide-left animate-[slideOutLeft_8s]"></div>
+            
           </div>
         </div>
       </div>
